<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AuraFit</string>
    <string name="app_logo">app logo</string>
    <string name="name">Enter your name</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter password</string>
    <string name="signup">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="empower_your_aura_shape_your_fitness_with_aurafit">Empower Your Aura, Shape Your Fitness with AuraFit</string>
    <string name="continue_google">Continue with google</string>
    <string name="log_in">Log In</string>
    <string name="log_in_to_continue">Log In to Continue</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="cleanse_your_aura">Cleanse Your Aura: Discover the power of meditation and mindfulness to cleanse your aura and find inner clarity.</string>
    <string name="default_web_client_id">176750639715-h8qvgee63ov3b7aocl0s5sd52uham0g4.apps.googleusercontent.com</string>

    <string name="facebook_app_id">768846895449495</string>
    <string name="fb_login_protocol_scheme">fb768846895449495</string>
    <string name="facebook_client_token">YOUR_FACEBOOK_CLIENT_TOKEN</string>
    <string name="email_example_com">email@example.com</string>
    <string name="profile_image">Profile Image</string>
    <string name="your_name">Your Name</string>
    <string name="signout">Sign Out</string>

    <string name="OpenDrawer">Open navigation Drawer</string>
    <string name="CloseDrawer">Close navigation Drawer</string>
    <string name="hello_user">Hello, USER !!</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="choose_your_profile_picture">Choose your profile picture</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>
    <string name="chatbot_support">Chatbot support</string>
    <string name="settings">Settings</string>
    <string name="community">Community Post</string>
    <string name="physical_fitness">Physical Fitness</string>
    <string name="mental_fitness">Mental Fitness</string>
    <string name="analytics">Analytics</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercise">Exercises</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="status">Status</string>
    <string name="resources">Resources</string>
    <string name="music">Music</string>
    <string name="wellness">Wellness</string>
    <string name="meditation">Meditation</string>
    <string name="emotional_wellbeing">Wellbeing</string>
    <string name="mindcare">Mindcare</string>
    <string name="counselling">Counselling</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="get_started">Get Started</string>
    <string name="second_fragment2_label">Second Fragment 2</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="bmi_diet_description">Provide diet plans tailored to users\' BMI categories (underweight, normal weight, overweight, etc.).</string>
    <string name="bmi_diet_title">BMI Diet</string>
    <string name="mindfulness">Mindfulness</string>
    <string name="food_image">food_image\n</string>
    <string name="next">next\n</string>
    <string name="continuee">Continue\n</string>
    <string name="continue_program">Continue\n</string>
    <string name="add_new_post">Add new post\n</string>
    <!-- User Guide Heading -->
    <string name="user_guide_title">User Guide</string>

</resources>