<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_profile_picture"
        android:textColor="@color/deepblue"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/textGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_from_gallery"
        android:textSize="16sp"
        android:padding="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/textTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        android:textSize="16sp"
        android:padding="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="end"
        android:padding="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@android:color/black"/>

</LinearLayout>
