<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.aurafit.ui.bottom_nav_fragments.view.physical_fitness.exercise.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment2"
            app:destination="@id/SecondFragment2" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.aurafit.ui.bottom_nav_fragments.view.physical_fitness.exercise.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment2"
        android:name="com.example.aurafit.ui.bottom_nav_fragments.view.physical_fitness.exercise.SecondFragment2"
        android:label="@string/second_fragment2_label"
        tools:layout="@layout/fragment_second2">

        <action
            android:id="@+id/action_SecondFragment2_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

</navigation>
